--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^5.3.0",
     "react-scripts": "5.0.1",
     "react-social-icons": "^6.7.0",
+    "update-browserslist-db": "^1.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
